--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0%;
+  padding: 0%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +12,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.corazon {
+  background-color:transparent ;
+  border-color:transparent;
+  float: right;
+  font-size: 25px;
+  transition: color 1.5s;
+  
+  
+  
+  
+
+}
+
+.corazon :hover { 
+  color: red;
+  
+
 }
